<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_SwitchMagnet" Id="{596e482d-b5f1-014c-1b84-be1ac17def4b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SwitchMagnet

VAR_INPUT
	stSwitchConfig				: REFERENCE TO ST_SwitchConfig := GVL_General.stSwitchConfig;
	ShuttleVelocity				: REFERENCE TO LREAL := GVL_General.stMoverConfig.NormalVelo;
	Command	 		  			: BOOL;
END_VAR
VAR_OUTPUT
	MagnetOn						: BOOL;
	Timeout							: TON;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF stSwitchConfig.UseNominalCurrentVeloSetpoints THEN
    GVL_General.stSwitchStatus.CurrentVelocityCoeff     := GVL_General.stSwitchConfig.CurrentVelocityCoeffNominal;
ELSE
    GVL_General.stSwitchStatus.CurrentVelocityCoeff     := GVL_General.stSwitchConfig.VelocityCoeffFactor*CurrentF_VelocityCoeff(Velocity := GVL_General.stMoverConfig.NormalVelo);
END_IF

GVL_General.stSwitchStatus.CurrentTheoreticalEstimation    := (stSwitchConfig.SwitchCurrentNominal*stSwitchStatus.CurrentVelocityCoeff) + GVL_General.stSwitchConfig.PermanentMagnetForce;
GVL_General.stSwitchStatus.CurrentOutputMax     := GVL_General.stSwitchStatus.CurrentTheoreticalEstimation - GVL_General.stSwitchConfig.PermanentMagnetForce;

IF Command THEN
	GVL_General.stSwitchStatus.MagnetValue := LREAL_TO_INT(GVL_General.stSwitchStatus.CurrentOutputMax*stSwitchConfig.CurrentMultFactor);
ELSE
	GVL_General.stSwitchStatus.MagnetValue := 0;
END_IF

MagnetOn	:= GVL_General.stSwitchStatus.MagnetValue >0;

IF stSwitchConfig.CurrentMultFactor <> 0 THEN
    GVL_General.stSwitchStatus.CurrentOutputActual  := GVL_General.stSwitchStatus.MagnetValue / stSwitchConfig.CurrentMultFactor;
END_IF

//Use Magnet feedback to this timer; set preset time based on mover velocity
Timeout(IN := Command, PT := T#40MS);
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>